[project]
name = "leetcodesolver"
version = "0.1.0"
description = "LeetCodeSolver using crewAI"
authors = [
    { name = "Le Anh Tuan", email = "latuannetnam@gmail.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "loguru",
]

[project.scripts]
leetcodesolver = "leetcodesolver.main:run"
run_crew = "leetcodesolver.main:run"
train = "leetcodesolver.main:train"
replay = "leetcodesolver.main:replay"
test = "leetcodesolver.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
